--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -17,5 +17,9 @@
 
 
     <script src="/static/js/index.js"></script>
+    <script src="/static/js/peopleController.js"></script>
+    <script src="/static/js/donateController.js"></script>
+    <script src="/static/js/apiService.js"></script>
+
   </body>
 </html>
