--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -8,18 +8,21 @@
   </head>
   <body>
   <nav>
-    <a href="#/landing">Landing</a>
-    <a href="#/people">People</a>
+    <a href="#/login">Login</a>
+    <a href="#/people">Users</a>
     <a href="#/donate">Donate</a>
+    <a href="#/request">Requests</a>
   </nav>
   <div ng-view="">
   </div>
 
 
     <script src="/static/js/index.js"></script>
-    <script src="/static/js/peopleController.js"></script>
+    <script src="/static/js/userController.js"></script>
     <script src="/static/js/donateController.js"></script>
+    <script src="/static/js/requestController.js"></script>
     <script src="/static/js/apiService.js"></script>
+    <script src="/static/js/sessionService.js"></script>
 
   </body>
 </html>
