--- a/donate/static/templates/donate_edit.html
+++ b/donate/static/templates/donate_edit.html
@@ -33,5 +33,8 @@
             <p><label> Image: </label>
                 <input type="file" file-model="donate.image"/>
             </p>
+            <p><label> Location: </label>
+                <map location="donate.location"></map>
+            </p>
             <button type="submit">Save</button>
         </form>
