--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -26,6 +26,8 @@
 
     <!-- Theme CSS -->
     <link href="/static/css/new-age.min.css" rel="stylesheet">
+    <link href="/static/css/custom.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -79,7 +81,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <div ng-view="">
+    <div ng-view="" class="container-fluid">
     </div>
 
     <footer>
@@ -109,7 +111,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfiKSsAJw9XgyltheD0TWXjnkp09iqX0w"></script>
     <!-- Theme JavaScript -->
     <script src="/static/js/all.min.js"></script>
 
