--- a/donate/static/templates/donate_detail.html
+++ b/donate/static/templates/donate_detail.html
@@ -1,7 +1,8 @@
 <div class="well">
     <h1>{{ donate.item }}</h1>
     <img ng-src="{{ donate.image }}"/>
-    <p>{{ donate.location }}</p>
     <p>{{ donate.details }}</p>
-    <div class="gmap">maphere</div>
+    <div ng-if="donate && donate.location">
+        <map location="donate.location"></map>
+    </div>
 </div>
