--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -111,7 +111,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfiKSsAJw9XgyltheD0TWXjnkp09iqX0w"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfiKSsAJw9XgyltheD0TWXjnkp09iqX0w&libraries=places"></script>
     <!-- Theme JavaScript -->
     <script src="/static/js/all.min.js"></script>
 
