--- a/donate/static/templates/landing.html
+++ b/donate/static/templates/landing.html
@@ -7,10 +7,10 @@
                         <div class="header-content-inner">
                             <h1>Give More: Make a donation and change a life. </h1>
                             <div ng-if="!isLoggedIn" class="col-md-6">
-                                <a  href="/donate/#/landing#login" class="btn btn-outline btn-xl">Login</a>
+                                <a  href="/#/landing#login" class="btn btn-outline btn-xl">Login</a>
                             </div>
                             <div ng-if="!isLoggedIn" class="col-md-6">
-                                 <a href="/donate/#/register" class="btn btn-outline btn-xl page-scroll">Register Here</a>
+                                 <a href="/#/register" class="btn btn-outline btn-xl page-scroll">Register Here</a>
                             </div>
 
                         </div>
@@ -58,8 +58,8 @@
         <div class="cta-content">
             <div class="container">
                 <h2>Stop waiting.<br>Start giving.</h2>
-                 <a ng-if="!isLoggedIn" href="/donate/#/register" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-                 <a ng-if="isLoggedIn" href="/donate/#/donate" class="btn btn-outline btn-xl page-scroll">Let's Donate Today!</a>
+                 <a ng-if="!isLoggedIn" href="/#/register" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                 <a ng-if="isLoggedIn" href="/#/donate" class="btn btn-outline btn-xl page-scroll">Let's Donate Today!</a>
 
             </div>
         </div>
@@ -85,7 +85,7 @@
                      <!-- <button ng-if="isLoggedIn" ng-click="logout()" style="background-color:#fdcc52;" class="btn btn-outline btn-xl" type="button">Logout</button> -->
                 </div>
                 <div class="col-md-6">
-                     <a ng-if="!isLoggedIn" href="/donate/#/register" style="background-color:#fdcc52;" class="btn btn-outline btn-xl">Register Here</a>
+                     <a ng-if="!isLoggedIn" href="/#/register" style="background-color:#fdcc52;" class="btn btn-outline btn-xl">Register Here</a>
                 </div>
             </div>
 
