--- a/donate/static/templates/map.html
+++ b/donate/static/templates/map.html
@@ -1,10 +1,10 @@
 
 <div class="mapDirective">
-    <div style="height:500px;">
+    <div style="height:400px;">
     </div>
     <div class="marker">
     </div>
         <input onkeypress="return event.keyCode !=13;" id="pac-input" class="controls" type="text" placeholder="Search Box">
 
-    <button type="button" ng-click="locate()">Find my Location</button>
+    <button type="button" class="btn btn-outline darkbtn" style="display:block; margin:auto;" ng-click="locate()"><p>Find my Location</p></button>
 </div>
