--- a/donate/static/templates/register.html
+++ b/donate/static/templates/register.html
@@ -1,5 +1,7 @@
-<div id="register">
 
+
+    <div id="register" class="containerBig">
+     <h1>Register</h1>
             <form ng-submit="add(user)">
                 <p>
                     <label>UserName: </label>
@@ -28,4 +30,3 @@
                 <button type="submit">Save</button>
             </form>
         </div>
-
