--- a/donate/static/templates/welcome.html
+++ b/donate/static/templates/welcome.html
@@ -1,11 +1,22 @@
-
-      <label>Welcome, you can do one of the following tasks here:</label>
-      <ul>
-        <li>
-            <a class="page-scroll" href="#/donate">Donate</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#/request">Request</a>
-        </li>
-      </ul>
-
+	<header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="header-content">
+                        <div class="header-content-inner">
+							<img src="/static/img/michelangelo-71282_1280.jpg"  class="img-responsive landing-img img-rounded" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="header-content">
+                        <div class="header-content-inner">
+      						<h1>What would you like to do? </h1>
+     						<a class="btn btn-outline btn-xl page-scroll ng-scope" href="#/donate"><h2> Donate</h2></a>
+          					<a class="btn btn-outline btn-xl page-scroll ng-scope" href="#/request"><h2>Request</h2></a>
+     					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
