--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -41,7 +41,7 @@
 <body  id="page-top" ng-controller="mainController">
 
     <nav id="mainNav" class="navbar navbar-default bg-primary">
-        <div class="container">
+        <!-- <div class="container-fluid"> -->
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -77,7 +77,7 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
+        <!-- </div> -->
         <!-- /.container-fluid -->
     </nav>
 
