--- a/donate/static/css/custom.css
+++ b/donate/static/css/custom.css
@@ -33,3 +33,28 @@
 #pac-input:focus {
     border-color: #4d90fe;
 }
+
+.containerBig {
+    min-height: 85vh;
+}
+#mainNav {
+    margin-bottom: 0px;
+}
+
+p {
+    font-size: 14px;
+}
+
+tbody th td{
+    font-size: 16px;
+}
+
+.small-well {
+    width: 80%;
+    display: block;
+    margin: auto;
+}
+
+.darkbtn {
+    background-color: grey;
+}
