--- a/donate/static/templates/landing.html
+++ b/donate/static/templates/landing.html
@@ -17,7 +17,11 @@
                     </div>
                 </div>
                 <div class="col-sm-5">
-                    <img src="/static/img/joy.jpg"  class="img-responsive img-rounded" alt="">
+                    <div class="header-content">
+                        <div class="header-content-inner">
+                            <img src="/static/img/joy.jpg"  class="img-responsive landing-img img-rounded" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -108,6 +112,4 @@
             </ul>
         </div>
     </section>
-
-
 </div>
