--- a/donate/static/templates/donate_edit.html
+++ b/donate/static/templates/donate_edit.html
@@ -29,7 +29,7 @@
             <p ng-show="donate.category">
                 <label>SubCategory choice: </label>
                 <select ng-model="donate.subcategory">
-                    <option data-ng-repeat="sub in subcategories" ng-value="{{sub.resource_uri}}">{{sub.title}}</option>
+                    <option data-ng-repeat="sub in subcategories" value="{{sub.resource_uri}}">{{sub.title}}</option>
                 </select>
             </p>
             <p><label> Image: </label>
