--- a/donate/static/templates/landing.html
+++ b/donate/static/templates/landing.html
@@ -7,7 +7,7 @@
                         <div class="header-content-inner">
                             <h1>Give More: Make a donation and change a life. </h1>
                             <div ng-if="!isLoggedIn" class="col-md-6">
-                                <a  href="/#/landing#login" class="btn btn-outline btn-xl">Login</a>
+                                <a  href="/#/login" class="btn btn-outline btn-xl">Login</a>
                             </div>
                             <div ng-if="!isLoggedIn" class="col-md-6">
                                  <a href="/#/register" class="btn btn-outline btn-xl page-scroll">Register Here</a>
