--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#/landing">Home</a>
                     </li>
                      <li ng-if="!isLoggedIn">
-                        <a class="page-scroll" href="#/landing#login">Login</a>
+                        <a class="page-scroll" href="#/login">Login</a>
                     </li>
                     <li ng-if="!isLoggedIn">
                         <a class="page-scroll" href="#/register">Register</a>
