--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -60,7 +60,13 @@
                         <a class="page-scroll" href="#/donate">Donate</a>
                     </li>
                     <li ng-if="isLoggedIn">
+                        <a class="page-scroll" href="#/myinterests">Donations I'm interested in</a>
+                    </li>
+                    <li ng-if="isLoggedIn">
                         <a class="page-scroll" href="#/request">Request</a>
+                    </li>
+                    <li ng-if="isLoggedIn">
+                        <a class="page-scroll" href="#/mydonations">Things I've donated</a>
                     </li>
                      <li ng-if="isLoggedIn">
                         <a class="page-scroll" ng-click="logout()" href="">Logout</a>
