no longer interested button function

--- a/donate/static/templates/myinterests.html
+++ b/donate/static/templates/myinterests.html
@@ -26,7 +26,7 @@
              </td>
              <td>
                  <!-- todo -->
-                 <button type="button" class="btn btn-outline darkbtn" ng-click="remove(d)">Delete</button>
+                 <button type="button" class="btn btn-outline darkbtn" ng-click="remove(d)">No Longer Interested</button>
              </td>
 
          </tr>
