--- a/donate/static/templates/interestedDirective.html
+++ b/donate/static/templates/interestedDirective.html
@@ -4,7 +4,8 @@
             <td ng-bind="d.interested.username"></td>
             <td>{{ d.interested.first_name }} {{ d.interested.last_name }}</td>
             <td>
-                <button ng-click="approve(d)">Approve </button>
+                <button ng-if="d.approve_contact == false" ng-click="approve(d)">Approve </button>
+                <button ng-if="d.approve_contact == true" ng-click="disapprove(d)">Remove Approval </button>
             </td>
         </tr>
     </tbody>
