let me help, myrequests

--- a/donate/static/templates/myinterests.html
+++ b/donate/static/templates/myinterests.html
@@ -1,9 +1,9 @@
 
 
 <div class="container containerBig">
-    <h1 class="text-center">Items recently donated</h1>
+    <h1 class="text-center">Donations I'm interested in</h1>
      <table class="table">
-      <p><a href="#/donate/edit/new"><p>Click here to add more</p></a>
+      <p><a href="#/donate/edit/new"><p>Click here to add a donation</p></a>
      <tbody>
          <tr>
              <th>Item</th>
