--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -66,6 +66,12 @@
                         <a class="page-scroll" href="#/request">Request</a>
                     </li>
                     <li ng-if="isLoggedIn">
+                        <a class="page-scroll" href="#/myrequests">My Requested Items</a>
+                    </li>
+                    <li ng-if="isLoggedIn">
+                        <a class="page-scroll" href="#/letmehelp">Let me help!</a>
+                    </li>
+                    <li ng-if="isLoggedIn">
                         <a class="page-scroll" href="#/mydonations">Things I've donated</a>
                     </li>
                      <li ng-if="isLoggedIn">
